//@@author Deanson-Choo
package seedu.duke.shelving.shelves;

public class ActionShelves extends Shelves {
    public ActionShelves() {
        super("AC");
    }
}
