//@@author Deanson-Choo
package seedu.duke.shelving.shelves;

public class AdventureShelves extends Shelves {
    public AdventureShelves() {
        super("AD");
    }
}
