//@@author Deanson-Choo
package seedu.duke.shelving.shelves;

public class HorrorShelves extends Shelves {
    public HorrorShelves() {
        super("H");
    }
}
