//@@author Deanson-Choo
package seedu.duke.shelving.shelves;

public class MysteryShelves extends Shelves {
    public MysteryShelves() {
        super("MY");
    }
}
