//@@author Deanson-Choo
package seedu.duke.shelving.shelves;

public class NonFictionShelves extends Shelves{
    public NonFictionShelves() {
        super("NF");
    }
}
