//@@author Deanson-Choo
package seedu.duke.shelving.shelves;

public class RomanceShelves extends Shelves {
    public RomanceShelves() {
        super("R");
    }
}
