//@@author Deanson-Choo
package seedu.duke.shelving.shelves;

public class SciFiShelves extends Shelves {

    public SciFiShelves() {
        super("SCIF");
    }
}
